// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Relationshiptable component should render a list of residents 1`] = `
<DocumentFragment>
  <table
    class="govuk-table lbh-table"
    data-testid="residents-table"
  >
    <thead
      class="govuk-table__head"
    >
      <tr
        class="govuk-table__row"
      >
        <th
          class="govuk-table__header"
          scope="col"
        >
          Select
        </th>
        <th
          class="govuk-table__header"
          scope="col"
        >
          ID
        </th>
        <th
          class="govuk-table__header"
          scope="col"
        >
          Client Name
        </th>
        <th
          class="govuk-table__header"
          scope="col"
        >
          Address
        </th>
        <th
          class="govuk-table__header"
          scope="col"
        >
          Date of birth
        </th>
        <th
          class="govuk-table__header"
          scope="col"
        />
      </tr>
    </thead>
    <tbody
      class="govuk-table__body"
    >
      <tr
        class="govuk-table__row"
      >
        <td
          class="govuk-table__cell"
        >
          <input
            aria-labelledby="person_1"
            name="personId"
            type="radio"
            value="1"
          />
        </td>
        <td
          class="govuk-table__cell"
        >
          1
        </td>
        <td
          class="govuk-table__cell"
        >
          Foo Bar
        </td>
        <td
          class="govuk-table__cell"
        >
          <span />
        </td>
        <td
          class="govuk-table__cell"
        >
          13/11/2020
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`Relationshiptable component should render a resident without a postcode 1`] = `
<DocumentFragment>
  <table
    class="govuk-table lbh-table"
    data-testid="residents-table"
  >
    <thead
      class="govuk-table__head"
    >
      <tr
        class="govuk-table__row"
      >
        <th
          class="govuk-table__header"
          scope="col"
        >
          Select
        </th>
        <th
          class="govuk-table__header"
          scope="col"
        >
          ID
        </th>
        <th
          class="govuk-table__header"
          scope="col"
        >
          Client Name
        </th>
        <th
          class="govuk-table__header"
          scope="col"
        >
          Address
        </th>
        <th
          class="govuk-table__header"
          scope="col"
        >
          Date of birth
        </th>
        <th
          class="govuk-table__header"
          scope="col"
        />
      </tr>
    </thead>
    <tbody
      class="govuk-table__body"
    >
      <tr
        class="govuk-table__row"
      >
        <td
          class="govuk-table__cell"
        >
          <input
            aria-labelledby="person_2"
            name="personId"
            type="radio"
            value="2"
          />
        </td>
        <td
          class="govuk-table__cell"
        >
          2
        </td>
        <td
          class="govuk-table__cell"
        >
          Foo Bar
        </td>
        <td
          class="govuk-table__cell"
        >
          <span />
        </td>
        <td
          class="govuk-table__cell"
        >
          13/11/2020
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;
